# daniclaw-cpp

./: .env.example  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.agents/skills/code-analyzer/: SKILL.md
.agents/skills/prd-manager/: SKILL.md
.agents/skills/text-summarizer/: SKILL.md
specs/: PRD.md  agent-loop.md  architecture.md  memory.md  skill-user.md  telegram-input.md  telegram-output.md
src/: main.cpp
src/agent/: AgentLoop.cpp  AgentLoop.h  DebateCoordinator.cpp  DebateCoordinator.h
src/config/: Config.h
src/controllers/: AgentController.cpp  AgentController.h
src/database/: Database.cpp  Database.h
src/integrations/: GmailPoller.cpp  GmailPoller.h
src/memory/: MemoryManager.cpp  MemoryManager.h
src/providers/: DeepSeekProvider.cpp  DeepSeekProvider.h  GeminiProvider.cpp  GeminiProvider.h  GroqProvider.cpp  GroqProvider.h  ILlmProvider.h  OpenAIProvider.cpp  OpenAIProvider.h  ProviderFactory.cpp  ProviderFactory.h
src/rag/: Embedder.cpp  Embedder.h  VectorStore.cpp  VectorStore.h
src/reminders/: ReminderManager.cpp  ReminderManager.h
src/repositories/: ConversationRepository.cpp  ConversationRepository.h  MessageRepository.cpp  MessageRepository.h
src/skills/: SkillLoader.cpp  SkillLoader.h
src/telegram/: TelegramBot.cpp  TelegramBot.h  TelegramTypes.h
src/tools/: BaseTool.cpp  BaseTool.h  CreateFileTool.cpp  CreateFileTool.h  IndexDocumentTool.cpp  IndexDocumentTool.h  ReadFileTool.cpp  ReadFileTool.h  ScheduleReminderTool.cpp  ScheduleReminderTool.h  SemanticSearchTool.cpp  SemanticSearchTool.h  SetTimezoneTool.cpp  SetTimezoneTool.h  ShellTool.cpp  ShellTool.h  ToolRegistry.cpp  ToolRegistry.h  WebSearchTool.cpp  WebSearchTool.h
src/utils/: HttpClient.cpp  HttpClient.h  Logger.h  Utils.cpp  Utils.h
